--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,12 @@ dependencies = [
     "langchain-tavily==0.2.11",
     "langchain-text-splitters>=0.3.9",
     "langgraph==0.6.6",
+    "presidio-analyzer>=2.2.0",
+    "presidio-anonymizer>=2.2.0",
     "pypdf==6.0.0",
     "python-docx>=0.8.11",
     "requests>=2.31.0",
+    "spacy>=3.7.0",
     "streamlit>=1.28.0",
     "tavily-python==0.7.1",
     "tiktoken==0.11.0",
