--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "langchain-tavily==0.2.11",
     "langchain-text-splitters>=0.3.9",
     "langgraph==0.6.6",
+    "pip>=25.2",
     "presidio-analyzer>=2.2.0",
     "presidio-anonymizer>=2.2.0",
     "pypdf==6.0.0",
