--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,13 @@ services:
     ports:
       - "8502:8501"
     environment:
-      # OpenAI API Key (configure via .env file)
+      # Environment mode (development/production)
+      - ENVIRONMENT=${ENVIRONMENT:-development}
+      # OpenAI API Key (configure via .env file or Docker secrets)
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
-      # Tavily API Key (configure via .env file)
+      # Tavily API Key (configure via .env file or Docker secrets)
       - TAVILY_API_KEY=${TAVILY_API_KEY:-}
-      # MCP Server URL (configure via .env file)
+      # MCP Server URL (configure via .env file or Docker secrets)
       - MCP_SERVER_URL=${MCP_SERVER_URL:-}
       # Streamlit configuration
       - STREAMLIT_SERVER_PORT=8501
@@ -25,6 +27,11 @@ services:
       - ./tmp:/app/tmp
       # Mount source code for development (optional - comment out for production)
       - .:/app
+    # Uncomment to use Docker secrets (recommended for production)
+    # secrets:
+    #   - openai_api_key
+    #   - tavily_api_key
+    #   - mcp_server_url
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "python", "healthcheck.py"]
@@ -42,7 +49,11 @@ services:
     ports:
       - "8000:8000"
     environment:
+      - ENVIRONMENT=${ENVIRONMENT:-development}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+    # Uncomment to use Docker secrets (recommended for production)
+    # secrets:
+    #   - openai_api_key
     command: ["uv", "run", "python", "server.py"]
     restart: unless-stopped
     profiles:
@@ -55,3 +66,17 @@ volumes:
 networks:
   default:
     name: llm-bootcamp-network
+
+# Docker secrets configuration (uncomment for production use)
+# To use secrets, create text files with your API keys:
+#   echo "your-openai-key" > secrets/openai_api_key.txt
+#   echo "your-tavily-key" > secrets/tavily_api_key.txt
+#   echo "http://mcp-server:8000" > secrets/mcp_server_url.txt
+# Then uncomment the secrets sections above and below
+# secrets:
+#   openai_api_key:
+#     file: ./secrets/openai_api_key.txt
+#   tavily_api_key:
+#     file: ./secrets/tavily_api_key.txt
+#   mcp_server_url:
+#     file: ./secrets/mcp_server_url.txt
