--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pypdf==6.0.0",
     "python-docx>=0.8.11",
     "requests>=2.31.0",
+    "ruff>=0.14.0",
     "spacy>=3.7.0",
     "streamlit>=1.28.0",
     "tavily-python==0.7.1",
