--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,11 +131,17 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Create dummy .env file
+    - name: Create dummy .env file and secrets
       run: |
         echo "OPENAI_API_KEY=sk-test" > .env
         echo "TAVILY_API_KEY=tvly-test" >> .env
         echo "MCP_SERVER_URL=http://localhost:8000" >> .env
+
+        # Create dummy secrets directory and files for Docker
+        mkdir -p secrets
+        echo "sk-test" > secrets/openai_api_key.txt
+        echo "tvly-test" > secrets/tavily_api_key.txt
+        echo "http://localhost:8000" > secrets/mcp_server_url.txt
 
     - name: Build Docker image
       run: |
