--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -63,16 +63,22 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Create dummy .env
+    - name: Create dummy .env and secrets
       run: |
         echo "OPENAI_API_KEY=sk-test" > .env
         echo "TAVILY_API_KEY=tvly-test" >> .env
         echo "MCP_SERVER_URL=http://localhost:8000" >> .env
 
+        # Create dummy secrets directory and files for Docker
+        mkdir -p secrets
+        echo "sk-test" > secrets/openai_api_key.txt
+        echo "tvly-test" > secrets/tavily_api_key.txt
+        echo "http://localhost:8000" > secrets/mcp_server_url.txt
+
     - name: Build and time Docker image
       run: |
         start_time=$(date +%s)
-        docker-compose build streamlit-app
+        docker compose build streamlit-app
         end_time=$(date +%s)
         build_time=$((end_time - start_time))
 
